--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,8 @@ dependencies {
     implementation ("com.google.firebase:firebase-storage")
     implementation("com.github.bumptech.glide:glide:4.15.1")
 
+    //Google Ads
+    implementation("com.google.android.gms:play-services-ads:23.3.0")
+
 
 }
